# sendosio

./: .gitignore  CMakeLists.txt  README.md
include/sendosio/: sendosio.hpp
include/sendosio/detail/: use_sender.hpp
include/sendosio/impl/: sendosio.hpp
src/: sendosio.cpp
test/: CMakeLists.txt  test_read_some.cpp  test_socket_pair.cpp  test_write_some.cpp
